<resources>
    <string name="app_name" translatable="false">h5_osdk</string>
    <string name="facebook_app_id" translatable="false">690071885079371</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb690071885079371</string>

    <string name="o_tip_network">Network Unavailable</string>
    <string name="o_Payment_failed_no_payment_product_ID_passed_in">Payment failed: no payment product ID passed in</string>
    <string name="o_Payment_failed_payment_product_id_is_empty">Payment failed: payment product id is empty</string>
    <string name="o_Payment_failed_order_number_cannot_be_empty">Payment failed: order number cannot be empty</string>
    <string name="o_Payment_failed_no_order_number">Payment failed: no order number</string>
    <string name="o_third_bind_hint">The tripartite account is successfully bound, the guest account will not be able to log in, please use the tripartite account to log in next time.</string>
    <string name="o_understood">understood</string>
    <string name="o_please_use_third_account_for_login">Please log in with the bound three-party account</string>
    <string name="o_guest_login_hint">Local anonymous account login</string>
    <string name="o_make_guest_for_login">Generate anonymous account login</string>
    <string name="o_verified">Verified</string>
    <string name="o_payment_is_not_supported_in_the_current_environment">Payment is not supported in the current environment</string>
    <string name="o_google_login_error">Google login failed</string>
    <string name="o_google_login_exception">Google login exception</string>
    <string name="o_google_cancel_pay">Google cancels payment</string>
    <string name="o_google_pay_error">Google payment failed</string>
    <string name="o_google_query_product_exception">Google query product exception</string>
    <string name="o_google_confirms_abnormal_payment">Google confirms abnormal payment</string>
    <string name="o_facebook_onCancel">Facebook Cancel Login</string>
    <string name="o_facebook_onError">Facebook login failed</string>
    <string name="o_facebook_login_exception">Facebook login exception</string>
    <string name="o_line_login_canceled">Cancel login</string>
    <string name="o_line_login_error">Line login failed</string>
    <string name="o_line_login_exception">Line login exception</string>
    <string name="o_login">Sign in</string>
    <string name="o_jump">jump over</string>
    <string name="o_line_login">Line</string>
    <string name="o_google_login">Google</string>
    <string name="o_facebook_login">Facebook</string>
    <string name="o_guest_login">Guest</string>
    <string name="o_guest_hint">Tourist account is easy to lose, please bind the following account as soon as possible</string>
    <string name="o_line_no_install">Please install Line and share</string>
    <string name="o_facebook_share_video_null">Shared video does not exist</string>
    <string name="o_facebook_no_login_for_share">1. The latest version of the facebook app needs to be installed\n2. Log in to the facebook app and ensure that it runs in the background to solve sharing problems</string>
    <string name="o_facebook_no_install">Please install Facebook7.0 or later to share</string>
    <string name="o_facebook_share_size_too_long">Share content including up to 6 photos and video elements</string>
    <string name="o_Failed_to_generate_guest_account">Failed to generate guest account, please try again later</string>
    <string name="o_facebook_bind_onCancel">Facebook unbind</string>
    <string name="o_facebook_bind_onError">Facebook binding failed</string>
    <string name="o_line_bind_onCancel">Line unbind</string>
    <string name="o_line_bind_onError">Line binding failed</string>
    <string name="o_google_bind_onCancel">Google unbind</string>
    <string name="o_google_bind_onError">Google binding failed</string>
    <string name="o_username">account number：</string>
    <string name="o_password">password：</string>
    <string name="o_confirm">confirm</string>
    <string name="o_prompt">prompt</string>
</resources>
